Sat May 23 21:33:55 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  extract method: #bin.

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  extract method: #isPointerDiff.

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  extract method: #isPointerArithmetic.

	* net/loveruby/cflat/type/TypeTable.java: new method #longSize.

	* net/loveruby/cflat/ast/ExprNode.java: remove unused method
	  #baseSize.

Mon May 18 04:52:25 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: allow ptr-ptr.

	* net/loveruby/cflat/compiler/IRGenerator.java: implement ptr-ptr.

	* net/loveruby/cflat/type/VoidType.java: VoidType#size is 1.

	* net/loveruby/cflat/ast/ExprNode.java: new helper method
	  #baseType.

Mon May 18 03:50:55 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java (optimize):
	  wrongly did not optimize asm code.

Mon May 18 03:29:59 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: move x[] -> x*
	  code to DereferenceChecker.

	* net/loveruby/cflat/compiler/DereferenceChecker.java: ditto.

	* net/loveruby/cflat/compiler/Compiler.java: pass TypeTable to
	  DereferenceChecker.

Mon May 18 03:01:22 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: change function pointer
	  syntax: int(*)(int,int) -> int(int,int)*.  Function type is
	  int(int,int).

	* net/loveruby/cflat/parser/Parser.jj: function returns function
	  type, not pointer to function.

	* net/loveruby/cflat/compiler/TypeResolver.java: resolve all
	  function headers first, then resolve bodies.

	* net/loveruby/cflat/compiler/TypeResolver.java: generate a
	  pointer for array-type expression.

	* net/loveruby/cflat/compiler/TypeResolver.java: isDereferable ->
	  isPointer.

	* net/loveruby/cflat/compiler/TypeChecker.java: ditto.
